--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=Tonashiro_nlw-feedback-widget
 sonar.projectName=nlw-feedback-widget
+sonar.organization=tonashiro
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/node_modules/**,src/webpack.config.*.js,src/**/*.test.tsx,src/**/*.test.ts,src/index.tsx,src/**/*.styles.ts,src/config/setupTests.ts,src/config/*,src/index.dev.ts,src/**/config.tsx
 sonar.sources=src
