--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,9 +3,6 @@ sonar.projectName=nlw-feedback-widget
 sonar.organization=tonashiro
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/node_modules/**,src/webpack.config.*.js,src/**/*.test.tsx,src/**/*.test.ts,src/index.tsx,src/**/*.styles.ts,src/config/setupTests.ts,src/config/*,src/index.dev.ts,src/**/config.tsx
-sonar.sources=src
+sonar.sources=.
 sonar.tests=src/
 sonar.test.inclusions=src/**/*.test.ts,src/**/*.test.tsx
-sonar.javascript.lcov.reportPaths=reports/lcov.info
-sonar.testExecutionReportPaths=reports/jest-sonar-reporter.xml
-sonar.ts.tslintconfigpath=.eslint
