--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,12 @@
 sonar.projectKey=Tonashiro_nlw-feedback-widget
-sonar.projectName=nlw-feedback-widget
 sonar.organization=tonashiro
-sonar.sourceEncoding=UTF-8
-sonar.exclusions=**/node_modules/**,src/webpack.config.*.js,src/**/*.test.tsx,src/**/*.test.ts,src/index.tsx,src/**/*.styles.ts,src/config/setupTests.ts,src/config/*,src/index.dev.ts,src/**/config.tsx
-sonar.sources=.
-sonar.tests=src/
-sonar.test.inclusions=src/**/*.test.ts,src/**/*.test.tsx
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=nlw-feedback-widget
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
