--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.projectKey=Tonashiro_nlw-feedback-widget
 sonar.projectName=nlw-feedback-widget
 sonar.organization=tonashiro
 sonar.sourceEncoding=UTF-8
-sonar.sources=.
+sonar.sources=src
