testing again again

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,15 @@
-sonar.projectKey=Tonashiro_nlw-feedback-widget
-sonar.projectName=nlw-feedback-widget
-sonar.organization=tonashiro
-sonar.sourceEncoding=UTF-8
-sonar.sources=src
+# Path to sources
+#sonar.sources=.
+#sonar.exclusions=
+#sonar.inclusions=
+
+# Path to tests
+#sonar.tests=
+#sonar.test.exclusions=
+#sonar.test.inclusions=
+
+# Source encoding
+#sonar.sourceEncoding=UTF-8
+
+# Exclusions for copy-paste detection
+#sonar.cpd.exclusions=
